--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
+    "eas-cli": "^16.28.0",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
