--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,39 +4,40 @@
     "slug": "gloreels",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/cat.png",
+    "icon": "./assets/images/splash-icon.png",
     "scheme": "gloreels",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/cat.png",
+      "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#0f8690"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gloreels.app"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/cat.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/splash-icon.png",
+        "backgroundColor": "#0f8690"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.frontend.app"
+      "package": "com.gloreels.app"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/cat.png",
+      "favicon": "./assets/images/splash-icon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/cat.png",
-          "imageWidth": 200,
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 250,
           "resizeMode": "contain",
           "backgroundColor": "#0f8690"
         }
