--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,8 @@ yarn-error.*
 *.tsbuildinfo
 
 # generated native folders
-/ios
-/android
+frontend/ios
+frontend/android
 
 # lock files
 package-lock.json
